fix: add Java 23+/24+ compatibility JVM args and upgrade commons-lang3 to 3.20.0
Add version-conditional JVM arguments in GrailsGradlePlugin to suppress
warnings on modern JDKs:
- --sun-misc-unsafe-memory-access=allow for Java 23+ (JEP 471/498, #15343)
- --enable-native-access=ALL-UNNAMED for Java 24+ (JEP 472, #15216)

Override commons-lang3 from 3.17.0 (Spring Boot managed) to 3.20.0 in the
Grails BOM to fix LANG-1786 timezone warnings and CVE-2025-48924.

Includes Gradle TestKit functional tests verifying the args are applied
correctly based on toolchain version.

Assisted-by: Claude Code <Claude@Claude.ai>